--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <script src="//code.jquery.com/jquery-2.1.1.min.js"></script>
   <meta charset="utf-8">
-  <title>JS Bin</title>
+  <title>Slide Show</title>
   <link rel="stylesheet" href="./style.css">
 </head>
 <body>
